fix: vertical spacing

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,6 +1,6 @@
 .App {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  /* height: 100vh; */
+  height: 140vh;
   background-color: rgb(20, 20, 20);
   overflow: scroll;
   text-align: center;
@@ -19,7 +19,7 @@
   text-align: center;
   display: inline-block;
   margin: auto;
-  /* background-color: #35aee2; */
+  background-color: rgb(20, 20, 20);
 }
 
 .authed-container {
